[package]
name = "rapl-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
libc = "0.2"
once_cell = "1"
thiserror = "1"
csv = "1"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Media_DeviceManager",
    "Win32_System_Services",
]

[build-dependencies]
sysinfo = "0.29"
